style.css
/* ... */
ul {
  list-style-type: none;
  padding-inline-start: 0;
  display: flex;
  flex-direction:column;
  row-gap: 20px;
  color: rgb(216, 216, 216);
}

.enterText {
  font-family: 'Futura';
  font-size:15px;
  width: 200px;
}

button {
  padding: 5px;
  border:1px solid;
  border-radius: 5px;
  background: none;
  font-family: 'Futura';
  font-size: 15px;
  cursor: pointer;
  color:#192F01;
}

button:hover {
  color:#F4DECB;
  border: 1px solid #192F01;
  background-color: #192F01;
}

button:disabled {
  cursor:default;
  color:rgba(16, 16, 16, 0.3);
}



.backButtonAlign {
  display: flex;
  width:100%;
  justify-content: flex-start;
  margin-top:20px;
  margin-bottom: 20px;
}

.nextButtonAlign {
  display: flex;
  justify-content: flex-end;
  margin: 20px;
}

.backButtonBox {
  flex:1;
  text-align:left;
}

.backButton {
  text-align: left;
  margin-left: 10px;
}

body {
    font-family: 'Futura';
    background-color: #F8EFEA;
    width:100%;
    height:100%;
    font-size: 16px;
    text-align: center;
    margin: 0px;
    min-height: 75vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    color: #192F01;
  }

.opener {
  gap: 15px;
  visibility: visible;
  display: flex;
  flex-direction:column;
  align-items: center;
  justify-content: space-between;
}

.wrapper{
  width: 100%;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  overflow: scroll;
  max-height: 65vh;
  padding-bottom: 10px;
  padding-top: 5px;
}

.recipeSelectionTitle {
  font-size: 20px;
  overflow:visible;
  text-wrap: wrap;
}

.cardImage {
  overflow: hidden;
  padding: 0px;
  /* max-height:fit-content */
  max-height: 100%;
  height: 100%;
}

.backToHome {
  border:#192F01;
}

.socialLinks {
  border: 1px solid #192F01;
}



.row {
  display: flex;
  flex-direction: row;
  background-color: #DED369;
  color: #192F01;
  border: solid #192F01 2px;
  border-radius: 20px;
  font-size: 100%;
  width: 42%;
  column-gap: 0px;
  margin-inline-start: 8px;
  margin-inline-end: 8px;
  margin-block-start: 8px;
  margin-inline-end:8px;
  overflow: hidden;
  /* height:100px; */
  /* height: fit-content; */
}

.column {
  width: 40%;
  padding: 15px;
  display: flex;
  flex: 1 0 42%;
  flex-direction: column;
  justify-content: center;
  column-gap: 10px;
  margin: 10px;
}

.sayMore {
  visibility: hidden;
  position: absolute;
}

.sayMoreVisible {
  visibility: visible;
  width: 100%;
}

.imageColumn {
  background-color: #DED369;
  border-radius:20px;
  float: left;
  margin:2px;
  overflow: hidden;
  text-wrap: wrap;
  width: 32%;
  border: solid 2px #E0475B;
  scroll-snap-align: center;

}

.columnPreview {
  float: left;
  background-color: #DED369;
  border: solid 2px #E0475B;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  width: 32%;
  margin:2px;
  row-gap: 20px;
  overflow: -moz-scrollbars-vertical;
  overflow-y: scroll;
  text-wrap:wrap;
  scroll-snap-align: center;
}

.rowPreview {
  width: 100%;
  overflow: scroll !important;
  max-height: 65vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
}

.rowPreview:after {
  content: "";
  display: table;
  clear: both;
}

.recipePreview {
  top: 12%;
  white-space: nowrap;
  display: block;
  visibility: hidden;
  width:100%;
  position: absolute;
  overflow: scroll;
}

.recipeSelectionScreen {
  padding-top:15px;
  white-space: nowrap;
  display: block;
  width: 100%;
  visibility: hidden;
  overflow: scroll;
  justify-content: space-around;
}

.alignPageInfo {
  display: flex;
  justify-content:space-evenly;
  margin-top:5px;
}

.recipeSelectionScreenVisible {
  visibility: visible;
}

.pageButtons {
  border-radius: 20 px;
  font-family: 'Futura';
}

h3 {
  color: #F8EFEA;
}

.miseOrientationButtons {
  color: #F8EFEA;
}

.pageCounter {
  align-self:center;
}

.recipeTitle {
  font-size: 20px;
  align-self:center;
  font-weight:bold;
  text-wrap: wrap;
}

.goAwayAbout {
  animation: smooth-disappear 2s ease;
  animation-fill-mode: forwards;
}

.instructionSettingsButton {
  border: none;
  /* flex:0.333; */
  margin-right: 15px;
  text-align:right;
}

.instructionSettingsBox {
  flex:1;
  text-align: right;
}

.instructions {
  top: 15%;
  max-height: 100%;
  width: 100%;
  visibility: hidden;
  overflow: visible;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.instructionListManager {
  color:black;
  /* max-height: 55vh; */
  overflow: scroll;
}

.instructionsText {
  color: white !important;
  max-height: 65vh;
  overflow: scroll;
  padding-left: 40px;
  padding-right: 40px;
}

.instructionManipulation {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
}

.instructionManipulationButton {
  border-radius: 5px;
  margin: 5px;
  padding: 15px;
  width: 100px;
}

.accentText {
  line-height: 1.5;
  color: #F8EFEA;
  font-size: x-large;
}

.instructionManipulationButton:disabled {
  background-color: rgb(210, 209, 209);
  color: black;
}

.boxContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.box {
  margin-top: 25px;
  width: 50%;
  align-self:center;
  align-content:center;
}

.switch {
  position: relative;
  display: inline-block;
  text-align: center;
  align-items: center;
  align-self: center;
  width: 60px;
  height: 34px;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}
  
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #faf8e7;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: #192F01;
  -webkit-transition: .4s;
  transition: .4s;
}
  
input:checked + .slider {
  background-color: #DED369;
}

input:focus + .slider {
  box-shadow: 0 0 1px #c1012ead;
}
/* ... */

